RESOLVED FIXED98482
[EFL][WK2] ewk_web_error_free is not a public API
https://bugs.webkit.org/show_bug.cgi?id=98482
Summary [EFL][WK2] ewk_web_error_free is not a public API
Ryuan Choi
Reported 2012-10-04 22:01:42 PDT
Ewk_Web_Error is just passed to application as a callback and it is released internally. So, we don't need to expose this as public API.
Attachments
Patch (4.05 KB, patch)
2012-10-04 22:29 PDT, Ryuan Choi
no flags
Patch (4.71 KB, patch)
2012-10-04 22:45 PDT, Ryuan Choi
no flags
Patch (4.71 KB, patch)
2012-10-04 22:49 PDT, Ryuan Choi
no flags
Chris Dumez
Comment 1 2012-10-04 22:25:22 PDT
Agreed. Thanks.
Ryuan Choi
Comment 2 2012-10-04 22:29:10 PDT
Chris Dumez
Comment 3 2012-10-04 22:34:34 PDT
Comment on attachment 167249 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167249&action=review > Source/WebKit2/UIProcess/API/efl/ewk_web_error.h:-55 > - * Frees the given object. This doc should probably be moved to the cpp file with a @internal tag.
Ryuan Choi
Comment 4 2012-10-04 22:45:14 PDT
Ryuan Choi
Comment 5 2012-10-04 22:46:02 PDT
(In reply to comment #3) > (From update of attachment 167249 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=167249&action=review > > > Source/WebKit2/UIProcess/API/efl/ewk_web_error.h:-55 > > - * Frees the given object. > > This doc should probably be moved to the cpp file with a @internal tag. OK, moved.
Chris Dumez
Comment 6 2012-10-04 22:47:49 PDT
Comment on attachment 167253 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167253&action=review > Source/WebKit2/UIProcess/API/efl/ewk_web_error.cpp:72 > + * Frees the give object. "given"
Ryuan Choi
Comment 7 2012-10-04 22:49:09 PDT
Ryuan Choi
Comment 8 2012-10-04 22:49:55 PDT
(In reply to comment #6) > (From update of attachment 167253 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=167253&action=review > > > Source/WebKit2/UIProcess/API/efl/ewk_web_error.cpp:72 > > + * Frees the give object. > > "given" mistake. fixed. Thank you.
Chris Dumez
Comment 9 2012-10-04 22:54:09 PDT
Comment on attachment 167254 [details] Patch LGTM. Thanks.
WebKit Review Bot
Comment 10 2012-10-04 23:55:13 PDT
Comment on attachment 167254 [details] Patch Clearing flags on attachment: 167254 Committed r130470: <http://trac.webkit.org/changeset/130470>
WebKit Review Bot
Comment 11 2012-10-04 23:55:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.