[EFL][WK2] ewk_web_error_free is not a public API https://bugs.webkit.org/show_bug.cgi?id=98482

Reviewed by Gyuyoung Kim.

Because Ewk_Web_Error is just passed as a parameter of callback function
and maintained internally, ewk_web_error_free should not be a public API.

This patch moves ewk_web_error_free from public header to private header.

* UIProcess/API/efl/ewk_context_download_client.cpp:
* UIProcess/API/efl/ewk_view_loader_client.cpp:
* UIProcess/API/efl/ewk_view_resource_load_client.cpp:
* UIProcess/API/efl/ewk_web_error.cpp:
* UIProcess/API/efl/ewk_web_error.h:
* UIProcess/API/efl/ewk_web_error_private.h:


Canonical link: https://commits.webkit.org/116464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130470 268f45cc-cd09-0410-ab3c-d52691b4dbfc